@@ -1,3 +1,9 @@
+2003-12-09  Jeff Hobbs  <jeffh@ActiveState.com>
+
+	* unix/configure:
+	* unix/tcl.m4: updated OpenBSD build configuration based on
+	[Patch #775246] (cassoff)
+
 2003-12-09  Donal K. Fellows  <donal.k.fellows@man.ac.uk>
 
 	* unix/tclUnixPort.h:	#ifdef'd out declarations of errno which
